--- a/first-project.html
+++ b/first-project.html
@@ -16,8 +16,9 @@
     <div class="menu">
         <a href='#'>Link One</a>
         <a href='#'>Link Two</a>
-        <a href='#'>Link Three</a>
-      </div>
+        <a href='#'>Link Three</a>  
+    </div>
+    </header>
     
         
     <div><h2>This is a website</h2></div>
