okay thid maybe my last commit i think everything looks good

--- a/first-project.html
+++ b/first-project.html
@@ -26,7 +26,7 @@
     <div class="web">this website has some subtext that goes here under 
 main title. it's a smaller font and the color is lower contrast        
     </div>
-    <div class="up">Sign up</div>
+    <a href="up">sign up</a>
         </div>
      <div class="img">
     <div class="image"><img src="https://english.cdn.zeenews.com/sites/default/files/styles/zm_700x400/public/2022/08/08/1075018-untitled-design-17.jpg" alt="cat">
@@ -38,21 +38,43 @@ main title. it's a smaller font and the color is lower contrast
     <div class="info">
         <div><h4>Some random information</h4></div>
     </div>
+    <div class="ill">
+        <div class="a-1">
+        <div class="a"></div>
+        <div>this is some subtext under an illustration or image</div>
+        </div>
+        <div class="b-1">
+        <div class="a"></div>
+    <div>this is some subtext under an illustration or image</div>
+        </div>
+        <div class="c-1">
+        <div class="a"></div>
+    <div>this is some subtext under an illustration or image</div>
+        </div>
+        <div class="d-1">
+        <div class="a"></div>
+        <div>this is some subtext under an illustrationor image</div>
+        </div>
+    </div>
+    </div>
 
-    <div>this is some subtext under an illustration or image</div>
-    <div>this is some subtext under an illustration or image</div>
-    <div>this is some subtext under an illustration or image</div>
-    <div>this is some subtext under an illustrationor image</div>
-</div>
-
+<div class="container-3">
 <div>this is an inspiring quote, or a testimonial from a customer. Maybe its just filling up space or 
     maybe people will actually read it. who knows? all i know is that it looks
     nice. 
 </div>
 <div><h2>-thor, God of Thunder</h2></div>
+</div>
+<div class="full">
+<div class="container-4">
 <div>call to action! its time!</div>
 <div>sign up for our product by clicking that button right over there!
 </div>
-<div>sign up</div>
+</div>
+<div class="cont">
+<a href="link">sign up</a>
+</div>
+</div>
 </body>
+
 </html>
